# Danclaw

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml
cli/: README.md  __init__.py  agent.py
config/: README.md  __init__.py  danclaw.json  loader.py
diagrams/: architecture.excalidraw  conversation-flow.excalidraw  listener-contract.excalidraw  permission-resolution.excalidraw
dispatcher/: README.md  __init__.py  __main__.py  database.py  dispatcher.py  executor.py  models.py  permissions.py  repository.py  session_manager.py  socket_server.py  telemetry.py
listeners/: README.md
logging_config/: README.md  __init__.py  setup.py
personas/: README.md  __init__.py  admin.md  default.md  loader.py
plans/: danclaw.md
scripts/: e2e_test.py
tests/: conftest.py  test_admin_agent.py  test_cli_agent.py  test_config_loader.py  test_config_permissions.py  test_database.py  test_deploy.py  test_deploy_restriction.py  test_deploy_telemetry.py  test_dispatcher.py  test_dispatcher_main.py  test_dispatcher_telemetry.py  test_docker_compose.py  test_e2e_claude.py  test_e2e_obsidian.py  test_executor.py  test_git_ops.py  test_git_ops_telemetry.py  test_logging_config.py  test_obsidian_tools.py  test_permissions.py  test_persistence.py  test_persona_loader.py  test_repository.py  test_session_manager.py  test_session_persistence.py  test_slack_listener.py  test_slack_log_sink.py  test_socket_server.py  test_standard_message.py  test_telemetry.py  test_telemetry_query.py  test_telemetry_sinks.py  test_tool_telemetry.py  test_trigger_deploy.py
tools/: README.md  _vault.py  deploy.py  git_ops.py  instrumented.py  (+4 more)
(+4 files in other folders)
