[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danclaw"
version = "0.1.0"
description = "Multi-agent communication and automation platform"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["dispatcher*", "config*", "listeners*", "tools*", "cli*"]

[project.scripts]
agent = "cli.agent:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not manual'"
markers = [
    "manual: marks tests that require external services and manual invocation",
]
