[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danclaw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite",
    "aiohttp",
]

[tool.setuptools.packages.find]
include = ["config*", "dispatcher*", "listeners*", "tools*"]
